2009-12-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11046]
	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): Fix kernel
	version check.

2009-11-05  Bruno Haible  <bruno@clisp.org>

	[BZ #11056]
	* posix/unistd.h (execve, fexecve, execv, execvp, execvpe): Mark the
	argv argument as non-NULL.
	(execle, execl, execlp): Mark the first ARG argument as non-NULL.

-2009-12-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Define mmsghdr and declare
	recvmmsg.
	* sysdeps/unix/sysv/linux/syscalls.list: Add entry for recvmmsg.
	* sysdeps/unix/sysv/linux/Versions: Add recvmmsg for GLIBC_2.12.

2009-12-04  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/s390-64/dl-trampoline.S: Add CFI for the call saved
	registers.
	* sysdeps/s390/s390-32/dl-trampoline.S: Likewise.
	* sysdeps/s390/s390-32/s390-mcount.S: Add CFI.
	* sysdeps/s390/s390-64/s390x-mcount.S: Add CFI.

2009-11-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/sched.h: Define SCHED_IDLE and
	SCHED_RESET_ON_FORK.

2009-11-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): Avoid code
	only used on truly ancient kernel if configuration requires a more
	recent kernel.

2009-11-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3662]
	* stdlib/random_r.c: Fix comments for __initstate_r and __setstate_r.
	Patch by Christopher Neufeld <glibcbugs0000@cneufeld.ca>.

	* sysdeps/unix/grantpt.c (pts_name): Take additional parameter,
	pass it on to __ptsname_internal.
	(grantpt): Pass stat64 pointer to pts_name.  Remove stat call here.
	* sysdeps/unix/sysv/linux/ptsname.c (__ptsname_internal): New function.
	All the code from __ptsname_r but take additional parameter.  Use that
	instead of pointer to local stat64 variable.
	(__ptsname_r): Call __ptsname_internal with pointer to local stat64
	variable.
	* include/stdlib.h: Declare __ptsname_internal.
